@@ -1,5 +1,7 @@
 2011-05-25  Jason Merrill  <jason@redhat.com>
 
+	* g++.dg/cpp0x/error4.C: New.
+
 	* g++.dg/cpp0x/rv-restrict.C: New.
 
 2011-05-26  Fabien Chêne  <fabien@gcc.gnu.org>
